bg image and bottom margin to prevent card overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+:root {
+  --card-size: calc(95vw/7);
+}
+
 body {
   margin: 0;
   padding: 0;
   background-color: rgb(0, 75, 0);
-  /* background-color: #222; */
+  background-image: url(./media/images/background/Poker-Table-Top-Background.jpg);
+  background-repeat: repeat;
+  background-size: 100%;
   color: white;
 }
 
@@ -25,16 +31,16 @@ p {
 }
 .tableau{
   flex-direction: column;
+  margin-bottom: calc(var(--card-size));
 }
 
 .card {
-  /*250x389*/
-  width: calc(95vw/7);
+  width: var(--card-size);
+  max-width: 125px;
   height: auto;
   position: absolute;
 }.card:hover{
   filter: drop-shadow(0 0 5px white);
-  /* transition: 100ms; */
   margin-top: -2px;
 }
 
